res_odbc: Use negative connection cache for all connections

Reported as a bug. When server is marked as unconnectable, we should
not try to connect in any way.

ASTERISK-22708 #close

Change-Id: I431cc2e8584ab0b6908b3523d0a0e18c9a527271